// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<App>
  <Page
    empty={Object {}}
    title="Control Panel"
  />
  <UpgradeBanner
    hasCC={true}
  />
  <Connect(AccessControl)
    condition={[Function]}
  >
    <h1>
      Show a thing on the dashboard based on config
    </h1>
  </Connect(AccessControl)>
  <Connect(UsageReport) />
  <Banner
    status="default"
    title="Hey! We noticed you haven't imported a suppression list"
  >
    <p>
      If you're coming from a previous provider, be sure to also 
      <a>
        import your suppressions
      </a>
      .
    </p>
  </Banner>
  <Tutorial
    currentUser={
      Object {
        "email_verified": true,
      }
    }
  />
</App>
`;

exports[`renders correctly when user is not verified 1`] = `
<App>
  <Page
    empty={Object {}}
    title="Control Panel"
  />
  <EmailBanner
    handleResend={[Function]}
    sendingStatus={null}
  />
  <Connect(AccessControl)
    condition={[Function]}
  >
    <h1>
      Show a thing on the dashboard based on config
    </h1>
  </Connect(AccessControl)>
  <Connect(UsageReport) />
  <Banner
    status="default"
    title="Hey! We noticed you haven't imported a suppression list"
  >
    <p>
      If you're coming from a previous provider, be sure to also 
      <a>
        import your suppressions
      </a>
      .
    </p>
  </Banner>
  <Tutorial
    currentUser={
      Object {
        "email_verfied": false,
      }
    }
  />
</App>
`;
